standardize and accuracy

--- a/choice/baseline.ipynb
+++ b/choice/baseline.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "987bcc17",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-17T17:39:46.154062Z",
+     "start_time": "2023-11-17T17:39:45.548882Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -21,9 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fdffad2f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-17T17:40:11.509101Z",
+     "start_time": "2023-11-17T17:39:46.158252Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -149,137 +159,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8802f2b7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-17T17:40:12.161167Z",
+     "start_time": "2023-11-17T17:40:11.509944Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8c48c838",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-17T17:40:12.174489Z",
+     "start_time": "2023-11-17T17:40:12.163058Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>V</th>\n",
-       "      <th>RU</th>\n",
-       "      <th>TU</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-40.571803</td>\n",
-       "      <td>2.927462</td>\n",
-       "      <td>-4.671593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>-9.580969</td>\n",
-       "      <td>2.927462</td>\n",
-       "      <td>-1.103189</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>-13.683779</td>\n",
-       "      <td>0.942959</td>\n",
-       "      <td>-1.937451</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>-12.134972</td>\n",
-       "      <td>1.520988</td>\n",
-       "      <td>-1.808688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>-13.124462</td>\n",
-       "      <td>1.921507</td>\n",
-       "      <td>-2.024360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143991</th>\n",
-       "      <td>-9.553063</td>\n",
-       "      <td>1.520988</td>\n",
-       "      <td>-1.423861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143992</th>\n",
-       "      <td>-10.486649</td>\n",
-       "      <td>1.921507</td>\n",
-       "      <td>-1.617495</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143993</th>\n",
-       "      <td>-9.006734</td>\n",
-       "      <td>2.220019</td>\n",
-       "      <td>-1.423747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143994</th>\n",
-       "      <td>-9.476516</td>\n",
-       "      <td>2.453570</td>\n",
-       "      <td>-1.525928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143999</th>\n",
-       "      <td>21.278918</td>\n",
-       "      <td>-2.927462</td>\n",
-       "      <td>2.450136</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>67200 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                V        RU        TU\n",
-       "4      -40.571803  2.927462 -4.671593\n",
-       "9       -9.580969  2.927462 -1.103189\n",
-       "10     -13.683779  0.942959 -1.937451\n",
-       "11     -12.134972  1.520988 -1.808688\n",
-       "12     -13.124462  1.921507 -2.024360\n",
-       "...           ...       ...       ...\n",
-       "143991  -9.553063  1.520988 -1.423861\n",
-       "143992 -10.486649  1.921507 -1.617495\n",
-       "143993  -9.006734  2.220019 -1.423747\n",
-       "143994  -9.476516  2.453570 -1.525928\n",
-       "143999  21.278918 -2.927462  2.450136\n",
-       "\n",
-       "[67200 rows x 3 columns]"
-      ]
+      "text/plain": "                V        RU        TU\n4      -40.571803  2.927462 -4.671593\n9       -9.580969  2.927462 -1.103189\n10     -13.683779  0.942959 -1.937451\n11     -12.134972  1.520988 -1.808688\n12     -13.124462  1.921507 -2.024360\n...           ...       ...       ...\n143991  -9.553063  1.520988 -1.423861\n143992 -10.486649  1.921507 -1.617495\n143993  -9.006734  2.220019 -1.423747\n143994  -9.476516  2.453570 -1.525928\n143999  21.278918 -2.927462  2.450136\n\n[67200 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>V</th>\n      <th>RU</th>\n      <th>TU</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4</th>\n      <td>-40.571803</td>\n      <td>2.927462</td>\n      <td>-4.671593</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>-9.580969</td>\n      <td>2.927462</td>\n      <td>-1.103189</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>-13.683779</td>\n      <td>0.942959</td>\n      <td>-1.937451</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>-12.134972</td>\n      <td>1.520988</td>\n      <td>-1.808688</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>-13.124462</td>\n      <td>1.921507</td>\n      <td>-2.024360</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>143991</th>\n      <td>-9.553063</td>\n      <td>1.520988</td>\n      <td>-1.423861</td>\n    </tr>\n    <tr>\n      <th>143992</th>\n      <td>-10.486649</td>\n      <td>1.921507</td>\n      <td>-1.617495</td>\n    </tr>\n    <tr>\n      <th>143993</th>\n      <td>-9.006734</td>\n      <td>2.220019</td>\n      <td>-1.423747</td>\n    </tr>\n    <tr>\n      <th>143994</th>\n      <td>-9.476516</td>\n      <td>2.453570</td>\n      <td>-1.525928</td>\n    </tr>\n    <tr>\n      <th>143999</th>\n      <td>21.278918</td>\n      <td>-2.927462</td>\n      <td>2.450136</td>\n    </tr>\n  </tbody>\n</table>\n<p>67200 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,60 +202,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e95b265c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-17T17:40:12.181540Z",
+     "start_time": "2023-11-17T17:40:12.174240Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'Train size: 60480, test size: 6720'"
-      ]
+      "text/plain": "'Train size: 53760, test size: 13440'"
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Initializing logistic regression \n",
-    "regr = LogisticRegressionCV()\n",
+    "clf = LogisticRegressionCV()\n",
     "\n",
     "# Splitting the data into train and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, df['choice'], test_size=.1, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, df['choice'], test_size=.2, random_state=42)\n",
     "f'Train size: {len(X_train)}, test size: {len(X_test)}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "32526420",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-17T17:40:12.869815Z",
+     "start_time": "2023-11-17T17:40:12.183199Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'Test R2 = 0.83'"
-      ]
+      "text/plain": "'Accuracy = 0.82'"
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Scaling the data\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
     "# Fitting the model and evaluating performance\n",
-    "regr.fit(X_train, y_train)\n",
-    "f'Test R2 = {regr.score(X_test, y_test).round(2)}'"
+    "clf.fit(X_train, y_train)\n",
+    "f'Accuracy = {clf.score(X_test, y_test).round(2)}'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48868fa8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
