--- a/choice/baseline.ipynb
+++ b/choice/baseline.ipynb
@@ -187,8 +187,118 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                V        RU        TU\n4      -40.571803  2.927462 -4.671593\n9       -9.580969  2.927462 -1.103189\n10     -13.683779  0.942959 -1.937451\n11     -12.134972  1.520988 -1.808688\n12     -13.124462  1.921507 -2.024360\n...           ...       ...       ...\n143991  -9.553063  1.520988 -1.423861\n143992 -10.486649  1.921507 -1.617495\n143993  -9.006734  2.220019 -1.423747\n143994  -9.476516  2.453570 -1.525928\n143999  21.278918 -2.927462  2.450136\n\n[67200 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>V</th>\n      <th>RU</th>\n      <th>TU</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4</th>\n      <td>-40.571803</td>\n      <td>2.927462</td>\n      <td>-4.671593</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>-9.580969</td>\n      <td>2.927462</td>\n      <td>-1.103189</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>-13.683779</td>\n      <td>0.942959</td>\n      <td>-1.937451</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>-12.134972</td>\n      <td>1.520988</td>\n      <td>-1.808688</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>-13.124462</td>\n      <td>1.921507</td>\n      <td>-2.024360</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>143991</th>\n      <td>-9.553063</td>\n      <td>1.520988</td>\n      <td>-1.423861</td>\n    </tr>\n    <tr>\n      <th>143992</th>\n      <td>-10.486649</td>\n      <td>1.921507</td>\n      <td>-1.617495</td>\n    </tr>\n    <tr>\n      <th>143993</th>\n      <td>-9.006734</td>\n      <td>2.220019</td>\n      <td>-1.423747</td>\n    </tr>\n    <tr>\n      <th>143994</th>\n      <td>-9.476516</td>\n      <td>2.453570</td>\n      <td>-1.525928</td>\n    </tr>\n    <tr>\n      <th>143999</th>\n      <td>21.278918</td>\n      <td>-2.927462</td>\n      <td>2.450136</td>\n    </tr>\n  </tbody>\n</table>\n<p>67200 rows × 3 columns</p>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>V</th>\n",
+       "      <th>RU</th>\n",
+       "      <th>TU</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-40.571803</td>\n",
+       "      <td>2.927462</td>\n",
+       "      <td>-4.671593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-9.580969</td>\n",
+       "      <td>2.927462</td>\n",
+       "      <td>-1.103189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-13.683779</td>\n",
+       "      <td>0.942959</td>\n",
+       "      <td>-1.937451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>-12.134972</td>\n",
+       "      <td>1.520988</td>\n",
+       "      <td>-1.808688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>-13.124462</td>\n",
+       "      <td>1.921507</td>\n",
+       "      <td>-2.024360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143991</th>\n",
+       "      <td>-9.553063</td>\n",
+       "      <td>1.520988</td>\n",
+       "      <td>-1.423861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143992</th>\n",
+       "      <td>-10.486649</td>\n",
+       "      <td>1.921507</td>\n",
+       "      <td>-1.617495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143993</th>\n",
+       "      <td>-9.006734</td>\n",
+       "      <td>2.220019</td>\n",
+       "      <td>-1.423747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143994</th>\n",
+       "      <td>-9.476516</td>\n",
+       "      <td>2.453570</td>\n",
+       "      <td>-1.525928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143999</th>\n",
+       "      <td>21.278918</td>\n",
+       "      <td>-2.927462</td>\n",
+       "      <td>2.450136</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>67200 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                V        RU        TU\n",
+       "4      -40.571803  2.927462 -4.671593\n",
+       "9       -9.580969  2.927462 -1.103189\n",
+       "10     -13.683779  0.942959 -1.937451\n",
+       "11     -12.134972  1.520988 -1.808688\n",
+       "12     -13.124462  1.921507 -2.024360\n",
+       "...           ...       ...       ...\n",
+       "143991  -9.553063  1.520988 -1.423861\n",
+       "143992 -10.486649  1.921507 -1.617495\n",
+       "143993  -9.006734  2.220019 -1.423747\n",
+       "143994  -9.476516  2.453570 -1.525928\n",
+       "143999  21.278918 -2.927462  2.450136\n",
+       "\n",
+       "[67200 rows x 3 columns]"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -213,7 +323,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'Train size: 53760, test size: 13440'"
+      "text/plain": [
+       "'Train size: 60480, test size: 6720'"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -222,10 +334,10 @@
    ],
    "source": [
     "# Initializing logistic regression \n",
-    "clf = LogisticRegressionCV()\n",
+    "clf = LogisticRegressionCV(cv=10)\n",
     "\n",
     "# Splitting the data into train and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, df['choice'], test_size=.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, df['choice'], test_size=.1, random_state=42)\n",
     "f'Train size: {len(X_train)}, test size: {len(X_test)}'"
    ]
   },
@@ -242,7 +354,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'Accuracy = 0.82'"
+      "text/plain": [
+       "'Accuracy = 0.8262'"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -258,7 +372,7 @@
     "\n",
     "# Fitting the model and evaluating performance\n",
     "clf.fit(X_train, y_train)\n",
-    "f'Accuracy = {clf.score(X_test, y_test).round(2)}'"
+    "f'Accuracy = {clf.score(X_test, y_test).round(4)}'"
    ]
   }
  ],
