--- a/choice/choice.ipynb
+++ b/choice/choice.ipynb
@@ -320,7 +320,7 @@
    ],
    "source": [
     "# Reading in the .csv data\n",
-    "df = pd.read_csv('choice_data.csv', index_col=0)\n",
+    "df = pd.read_csv('choice.csv', index_col=0)\n",
     "df"
    ]
   },
@@ -1754,14 +1754,6 @@
     "clf.fit(X_train, y_train)\n",
     "f'Accuracy = {clf.score(X_test, y_test).round(4)}'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1a678c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
