remove change working dir

--- a/crt/crt.ipynb
+++ b/crt/crt.ipynb
@@ -12,10 +12,7 @@
     "import sys\n",
     "if 'google.colab' in sys.modules:  # If in Google Colab environment\n",
     "    # Installing requisite packages\n",
-    "    !pip install transformers accelerate optimum auto-gptq\n",
-    "\n",
-    "    # Change working directory to crt\n",
-    "    %cd /content/drive/MyDrive/LLM4BeSci/crt"
+    "    !pip install transformers accelerate optimum auto-gptq"
    ]
   },
   {
