--- a/choice/choice.ipynb
+++ b/choice/choice.ipynb
@@ -32,8 +32,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
-    "    # Change working directory to ex1\n",
-    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/choice"
+    "    # Change working directory choice\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci/choice"
    ]
   },
   {
