--- a/personality/personality_using_pipeline.ipynb
+++ b/personality/personality_using_pipeline.ipynb
@@ -14,7 +14,7 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
-    "    # Changing working directory to ex1\n",
+    "    # Changing working directory to personality\n",
     "    %cd /content/drive/MyDrive/LLM4BeSci/personality"
    ],
    "metadata": {
