--- a/choice/choice.ipynb
+++ b/choice/choice.ipynb
@@ -32,7 +32,7 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
-    "    # Change working directory choice\n",
+    "    # Change working directory to choice\n",
     "    %cd /content/drive/MyDrive/LLM4BeSci/choice"
    ]
   },
