--- a/personality/personality.ipynb
+++ b/personality/personality.ipynb
@@ -23,8 +23,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Processing data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e749ee8b43faad3f"
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -32,42 +42,81 @@
     "from transformers import AutoTokenizer"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-02T13:24:42.348533Z",
+     "start_time": "2024-02-02T13:24:41.366823Z"
+    }
    },
    "id": "7a12dea23ca8d2cf"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                construct                                       item\n0    Achievement-Striving                  Go straight for the goal.\n1    Achievement-Striving       Plunge into tasks with all my heart.\n2    Achievement-Striving                            Demand quality.\n3    Achievement-Striving  Set high standards for myself and others.\n4    Achievement-Striving                   Turn plans into actions.\n..                    ...                                        ...\n295         Vulnerability                Remain calm under pressure.\n296         Vulnerability          Am calm even in tense situations.\n297         Vulnerability               Can handle complex problems.\n298         Vulnerability                 Readily overcome setbacks.\n299         Vulnerability                          Know how to cope.\n\n[300 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>construct</th>\n      <th>item</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Achievement-Striving</td>\n      <td>Go straight for the goal.</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Achievement-Striving</td>\n      <td>Plunge into tasks with all my heart.</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Achievement-Striving</td>\n      <td>Demand quality.</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Achievement-Striving</td>\n      <td>Set high standards for myself and others.</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Achievement-Striving</td>\n      <td>Turn plans into actions.</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>295</th>\n      <td>Vulnerability</td>\n      <td>Remain calm under pressure.</td>\n    </tr>\n    <tr>\n      <th>296</th>\n      <td>Vulnerability</td>\n      <td>Am calm even in tense situations.</td>\n    </tr>\n    <tr>\n      <th>297</th>\n      <td>Vulnerability</td>\n      <td>Can handle complex problems.</td>\n    </tr>\n    <tr>\n      <th>298</th>\n      <td>Vulnerability</td>\n      <td>Readily overcome setbacks.</td>\n    </tr>\n    <tr>\n      <th>299</th>\n      <td>Vulnerability</td>\n      <td>Know how to cope.</td>\n    </tr>\n  </tbody>\n</table>\n<p>300 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Loading data with pandas\n",
     "neo_items =  pd.read_csv('NEO_items.csv', usecols=['item', 'construct'])\n",
     "neo_items"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-02T13:24:42.362318Z",
+     "start_time": "2024-02-02T13:24:42.349515Z"
+    }
    },
    "id": "980be06b6a355d17"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Dataset({\n    features: ['construct', 'item'],\n    num_rows: 300\n})"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Converting into a HuggingFace dataset\n",
     "dat = Dataset.from_pandas(neo_items)\n",
     "dat"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-02T13:24:42.368947Z",
+     "start_time": "2024-02-02T13:24:42.361025Z"
+    }
    },
    "id": "aadb3057d6b58b3"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary size: 30522, max context length: 512\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading the tokenizer\n",
     "model_ckpt = 'distilbert-base-uncased'\n",
@@ -75,14 +124,38 @@
     "print(f'Vocabulary size: {tokenizer.vocab_size}, max context length: {tokenizer.model_max_length}')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-02T13:24:42.807923Z",
+     "start_time": "2024-02-02T13:24:42.368326Z"
+    }
    },
    "id": "7e9899764c20ff1"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/300 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "46b8028cd68f4888a6c238bdb8b60bc0"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[CLS]', 'go', 'straight', 'for', 'the', 'goal', '.', '[SEP]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]']\n"
+     ]
+    }
+   ],
    "source": [
     "# Tokenizing the text\n",
     "batch_tokenizer = lambda x: tokenizer(x['item'], padding=True, truncation=True)\n",
@@ -90,23 +163,65 @@
     "print([tokenizer.decode(id) for id in dat['input_ids'][0]])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-02T13:24:44.320694Z",
+     "start_time": "2024-02-02T13:24:42.810666Z"
+    }
    },
    "id": "af3d4b563e1417bc"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Dataset({\n    features: ['construct', 'item', 'input_ids', 'attention_mask'],\n    num_rows: 300\n})"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Setting the format of the dataset to torch tensors for passing to the model\n",
     "dat.set_format('torch', columns=['input_ids', 'attention_mask'])\n",
     "dat"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-02T13:24:44.325237Z",
+     "start_time": "2024-02-02T13:24:44.319788Z"
+    }
    },
    "id": "b59e8a62cd6224de"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([300, 16])"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dat['input_ids'].shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-02T13:24:49.546102Z",
+     "start_time": "2024-02-02T13:24:49.539427Z"
+    }
+   },
+   "id": "bc8c8e442530952b",
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
