--- a/personality/personality_using_pipeline.ipynb
+++ b/personality/personality_using_pipeline.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# Extracting the embeddings for the [CLS] token\n",
-    "features = [sample[0][0].numpy() for sample in features]\n",
+    "features = [sample[0, 0].numpy() for sample in features]\n",
     "\n",
     "# Converting to a data frame`\n",
     "features = pd.DataFrame(features)\n",
