fix broken notebook with transformers==4.37.2 reversion

--- a/crt/crt.ipynb
+++ b/crt/crt.ipynb
@@ -12,7 +12,7 @@
     "import sys\n",
     "if 'google.colab' in sys.modules:  # If in Google Colab environment\n",
     "    # Installing requisite packages\n",
-    "    !pip install transformers accelerate optimum auto-gptq"
+    "    !pip install transformers==4.37.2 accelerate optimum auto-gptq"
    ]
   },
   {
