--- a/crt/crt.ipynb
+++ b/crt/crt.ipynb
@@ -36,7 +36,7 @@
     "generator = pipeline(\n",
     "    \"text-generation\", model=model_ckpt, device_map='auto',\n",
     "    revision='main', tokenizer=model_ckpt, max_new_tokens=512,\n",
-    "    do_sample=False\n",
+    "    do_sample=False, num_beams=2\n",
     ")"
    ],
    "metadata": {
