--- a/reading/reading.ipynb
+++ b/reading/reading.ipynb
@@ -18,7 +18,7 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
-    "    # Change working directory to choice\n",
+    "    # Change working directory to reading\n",
     "    %cd /content/drive/MyDrive/LLM4BeSci/reading"
    ]
   },
@@ -101,7 +101,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Correlations and linear regression"
+    "## Predicting reading difficulty"
    ],
    "metadata": {
     "collapsed": false
